force-app/main/default/objects/Lead/fields/Calificaci_n_de_la_Atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n_de_la_Atenci_n__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Tiempo_Primera_Respuesta_Minutos__c),
    Tiempo_Primera_Respuesta_Minutos__c &lt;= 0
  ),
  &quot;✖ Nula&quot;,

  IF(
    Tiempo_Primera_Respuesta_Minutos__c &gt;= 45,
    &quot;🔴 Mala&quot;,

    IF(
      Tiempo_Primera_Respuesta_Minutos__c &gt;= 16,
      &quot;🟡 Regular&quot;,

      IF(
        Tiempo_Primera_Respuesta_Minutos__c &gt;= 6,
        &quot;🟠 Muy buena&quot;,

        &quot;🟢 Excelente&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calificación de la Atención</label>
    <type>Text</type>
</CustomField>