force-app/main/default/objects/Lead/fields/Cantidad_de_Autos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Autos__c</fullName>
    <label>Cantidad de Autos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>