force-app/main/default/objects/Lead/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>IF(
  Scoring__c &lt; 25,
  &quot;📉 Bajo&quot;,
  IF(
    AND(Scoring__c &gt;= 25, Scoring__c &lt; 50),
    &quot;⚖️ Media&quot;,
    IF(
    AND(Scoring__c &gt;= 50, Scoring__c &lt; 100),
    &quot;📈 Potencial&quot;,
    &quot;🏆 Prioritaria&quot;
  )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calificación</label>
    <type>Text</type>
</CustomField>