force-app/main/default/objects/Lead/fields/Inquiry_Made_for_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Made_for_Scoring__c</fullName>
    <label>Inquiry Made for Scoring</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>