force-app/main/default/objects/Lead/fields/KZ_Decisor__c.field-meta.xml
<CustomField>
    <fullName>KZ_Decisor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Puede tomar la decisión final?</inlineHelpText>
    <label>Decisor</label>
    <type>Checkbox</type>
</CustomField>