force-app/main/default/objects/Lead/fields/KZ_LeadBudget__c.field-meta.xml
<CustomField>
    <fullName>KZ_LeadBudget__c</fullName>
    <label>Presupuesto Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>