force-app/main/default/objects/Lead/fields/KZ_PurchaseDeadline__c.field-meta.xml
<CustomField>
    <fullName>KZ_PurchaseDeadline__c</fullName>
    <label>Plazo de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3 Meses</fullName>
            </value>
            <value>
                <fullName>3-6 Meses</fullName>
            </value>
            <value>
                <fullName>Mas de 6 Meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>