force-app/main/default/objects/Lead/fields/KzCiudad__c.field-meta.xml
<CustomField>
    <fullName>KzCiudad__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mar del Plata</fullName>
            </value>
            <value>
                <fullName>Correa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>