force-app/main/default/objects/Lead/fields/kzPuntuacionLead__c.field-meta.xml
<CustomField>
    <fullName>kzPuntuacionLead__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Puntuación de Scoring calculada automáticamente por Apex (0-100%).</description>
    <inlineHelpText>Porcentaje final de scoring calculado por el motor (0.00 - 100.00). Campo calculado por Trigger Apex (no editable por UI).</inlineHelpText>
    <label>Puntuación Lead</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>