force-app/main/default/objects/Lead/fields/kzwapp__WhatsApp_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>kzwapp__WhatsApp_Phone_Number__c</fullName>
    <description>This field stores the recipient&apos;s WhatsApp phone number in a format compatible with the WhatsApp Cloud API. The number should be in E.164 format (starting with the country code) without the + symbol or any other special characters. This format ensures proper delivery of WhatsApp messages.</description>
    <inlineHelpText>Enter the phone number in E.164 format, but do not include the &quot;+&quot; symbol. Ensure it starts with the country code followed by the phone number, with no spaces, dashes, or special characters.

Example:

Correct: 351912345678 (for a Portuguese number with country code +351)
Incorrect: +351912345678, 00351912345678, or 351-912-345-678</inlineHelpText>
    <label>WhatsApp Phone Number</label>
    <type>Phone</type>
</CustomField>