force-app/main/default/objects/Lead/fields/kzwapp__WhatsApp_Source_Website__c.field-meta.xml
<CustomField>
    <fullName>kzwapp__WhatsApp_Source_Website__c</fullName>
    <description>Identifies the website or landing page where the lead initiated a WhatsApp conversation.</description>
    <inlineHelpText>This field captures the domain or URL of the website from which the user clicked to start a WhatsApp chat. It helps determine which website drove the WhatsApp lead.</inlineHelpText>
    <label>WhatsApp Source Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>