force-app/main/default/objects/Lead/fields/kzwapp__WhatsApp_Status__c.field-meta.xml
<CustomField>
    <fullName>kzwapp__WhatsApp_Status__c</fullName>
    <description>Indicates the current WhatsApp delivery eligibility status for this phone number, based on API responses or internal validation logic.</description>
    <inlineHelpText>Reflects whether the associated phone number can receive WhatsApp messages. This status is updated automatically based on message delivery results and API errors (e.g., unregistered numbers, blocked contacts, or policy restrictions).</inlineHelpText>
    <label>WhatsApp Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>kzwapp__WhatsApp_Status</valueSetName>
    </valueSet>
</CustomField>