force-app/main/default/objects/Lead/fields/Lead_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_URL__c</fullName>
    <description>lmacena la URL directa al registro de Lead en Salesforce para notificaciones por email a los miembros de la cola.</description>
    <label>Lead Record URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>