force-app/main/default/objects/Lead/fields/Priority2__c.field-meta.xml
<CustomField>
    <fullName>Priority2__c</fullName>
    <label>Priority</label>
    <length>254</length>
    <type>Text</type>
</CustomField>