force-app/main/default/objects/Lead/fields/Producto_de_Interes__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_Interes__c</fullName>
    <label>Producto/s de Interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A 180</fullName>
            </value>
            <value>
                <fullName>B 200</fullName>
            </value>
            <value>
                <fullName>C 300</fullName>
            </value>
            <value>
                <fullName>GLC 300</fullName>
            </value>
            <value>
                <fullName>S 580</fullName>
            </value>
            <value>
                <fullName>AMG GT 63 S</fullName>
            </value>
            <value>
                <fullName>A1 Sportback</fullName>
            </value>
            <value>
                <fullName>A3 Sedan</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>Q5</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>RS7 Sportback</fullName>
            </value>
            <value>
                <fullName>Ford Ka</fullName>
            </value>
            <value>
                <fullName>Ford Fiesta</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Escape</fullName>
            </value>
            <value>
                <fullName>Explorer Platinum</fullName>
            </value>
            <value>
                <fullName>Mustang Mach-E GT Performance</fullName>
            </value>
            <value>
                <fullName>Yaris</fullName>
            </value>
            <value>
                <fullName>Corolla</fullName>
            </value>
            <value>
                <fullName>Camry</fullName>
            </value>
            <value>
                <fullName>RAV4</fullName>
            </value>
            <value>
                <fullName>Land Cruiser</fullName>
            </value>
            <value>
                <fullName>Supra GR</fullName>
            </value>
            <value>
                <fullName>Serie 1</fullName>
            </value>
            <value>
                <fullName>X1</fullName>
            </value>
            <value>
                <fullName>Serie 3</fullName>
            </value>
            <value>
                <fullName>X3</fullName>
            </value>
            <value>
                <fullName>Serie 7</fullName>
            </value>
            <value>
                <fullName>M8 Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>