force-app/main/default/objects/Lead/fields/Producto_Texto__c.field-meta.xml
<CustomField>
    <fullName>Producto_Texto__c</fullName>
    <label>Producto_Texto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>