force-app/main/default/objects/Lead/fields/Replica_Calificacion__c.field-meta.xml
<CustomField>
    <fullName>Replica_Calificacion__c</fullName>
    <label>Calificacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>