force-app/main/default/objects/Lead/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <label>Scoring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>