force-app/main/default/objects/Lead/fields/Segmento_de_Autos__c.field-meta.xml
<CustomField>
    <fullName>Segmento_de_Autos__c</fullName>
    <formula>IF(Cantidad_de_Autos__c &lt;= 3, &quot;1-3&quot;,
   IF(Cantidad_de_Autos__c &lt;= 5, &quot;4-5&quot;, &quot;6+&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento de Autos</label>
    <type>Text</type>
</CustomField>