force-app/main/default/objects/Lead/fields/Tiempo_primera_respuesta__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_primera_respuesta__c</fullName>
    <label>Tiempo primera respuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>