force-app/main/default/objects/Lead/fields/Tiempo_Primera_Respuesta_Minutos__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Primera_Respuesta_Minutos__c</fullName>
    <formula>IF(
  CONTAINS(Tiempo_primera_respuesta__c, &quot;días&quot;),
  /* Formato &quot;X días Y horas&quot; */
  VALUE(LEFT(Tiempo_primera_respuesta__c, FIND(&quot; días&quot;, Tiempo_primera_respuesta__c) - 1)) * 24 * 60
  +
  VALUE(
    MID(
      Tiempo_primera_respuesta__c,
      FIND(&quot; días&quot;, Tiempo_primera_respuesta__c) + LEN(&quot; días &quot;),
      FIND(&quot; horas&quot;, Tiempo_primera_respuesta__c) - (FIND(&quot; días&quot;, Tiempo_primera_respuesta__c) + LEN(&quot; días &quot;))
    )
  ) * 60,

  /* Formato &quot;X horas Y minutos&quot; */
  VALUE(LEFT(Tiempo_primera_respuesta__c, FIND(&quot; horas&quot;, Tiempo_primera_respuesta__c) - 1)) * 60
  +
  VALUE(
    MID(
      Tiempo_primera_respuesta__c,
      FIND(&quot; horas&quot;, Tiempo_primera_respuesta__c) + LEN(&quot; horas &quot;),
      FIND(&quot; minutos&quot;, Tiempo_primera_respuesta__c) - (FIND(&quot; horas&quot;, Tiempo_primera_respuesta__c) + LEN(&quot; horas &quot;))
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Primera Respuesta Minutos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>