force-app/main/default/objects/Lead/fields/Tiempo_resoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_resoluci_n__c</fullName>
    <label>Tiempo resolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>