force-app/main/default/objects/Lead/recordTypes/Destino_Interno.recordType-meta.xml
<RecordType>
    <fullName>Destino_Interno</fullName>
    <active>false</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Destino Interno</label>
</RecordType>