force-app/main/default/objects/Lead/recordTypes/EEUU.recordType-meta.xml
<RecordType>
    <fullName>EEUU</fullName>
    <active>false</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>EEUU</label>
</RecordType>