force-app/main/default/objects/Lead/recordTypes/Ejes_para_remolques.recordType-meta.xml
<RecordType>
    <fullName>Ejes_para_remolques</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>Ejes para remolques</description>
    <label>Ejes para remolques</label>
</RecordType>