force-app/main/default/objects/Lead/recordTypes/EUR.recordType-meta.xml
<RecordType>
    <fullName>EUR</fullName>
    <active>false</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>EUR</label>
</RecordType>