force-app/main/default/objects/Lead/recordTypes/Otros.recordType-meta.xml
<RecordType>
    <fullName>Otros</fullName>
    <active>false</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Otros</label>
</RecordType>