force-app/main/default/objects/Lead/recordTypes/Repuestos.recordType-meta.xml
<RecordType>
    <fullName>Repuestos</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>Repuestos</description>
    <label>Repuestos</label>
</RecordType>