force-app/main/default/objects/Lead/recordTypes/Sudamerica.recordType-meta.xml
<RecordType>
    <fullName>Sudamerica</fullName>
    <active>false</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Sudamerica</label>
</RecordType>