force-app/main/default/objects/Lead/recordTypes/Suspensiones.recordType-meta.xml
<RecordType>
    <fullName>Suspensiones</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>Suspensiones</description>
    <label>Suspensiones</label>
</RecordType>