force-app/main/default/objects/Lead/recordTypes/Terceros_ejes.recordType-meta.xml
<RecordType>
    <fullName>Terceros_ejes</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>Terceros ejes</description>
    <label>Terceros ejes</label>
</RecordType>