force-app/main/default/objects/Lead/listViews/Cold_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Cold_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Cold Leads</label>
    <queue>Cold_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>