force-app/main/default/objects/Lead/listViews/Hot_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Hot_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Hot Leads</label>
    <queue>Hot_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>