force-app/main/default/objects/Lead/listViews/Hot_Medium_Leads.listView-meta.xml
<ListView>
    <fullName>Hot_Medium_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Scoring__c</columns>
    <columns>Replica_Calificacion__c</columns>
    <columns>Grade__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scoring__c</field>
        <operation>greaterThan</operation>
        <value>70</value>
    </filters>
    <label>Hot &amp; Medium Leads</label>
</ListView>