force-app/main/default/objects/Lead/listViews/kzwapp__TodaysLeads.listView-meta.xml
<ListView>
    <fullName>kzwapp__TodaysLeads</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Leads</label>
</ListView>