force-app/main/default/objects/Lead/listViews/Test_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>Test_Lead_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Test Lead</label>
    <queue>Test_Lead</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>