force-app/main/default/objects/Lead/listViews/Tiempos_de_Atenci_n.listView-meta.xml
<ListView>
    <fullName>Tiempos_de_Atenci_n</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Calificaci_n_de_la_Atenci_n__c</columns>
    <columns>Tiempo_primera_respuesta__c</columns>
    <columns>Tiempo_resoluci_n__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tiempos de Atención</label>
</ListView>